<resources>
    <string name="app_name" translatable="false">NeeDice</string>
    <string name="settings_maj">SETTINGS</string>
    <string name="button">ROLL</string>
    <string name="dark_mode">Dark Mode</string>
    <string name="left_drawer_button">L</string>
    <string name="right_drawer_button">R</string>
    <string name="play_maj">PLAY</string>
<<<<<<< HEAD
    <string name="selected_language">Selected Language : %s</string>
=======
    <string name="dice_Selected">Dice Selected :</string>
    <string name="number_2">2</string>
    <string name="number_3">3</string>
    <string name="number_4">4</string>
    <string name="number_5">5</string>
    <string name="number_6">6</string>
>>>>>>> voletDice
</resources>