<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:animateLayoutChanges="true">

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <!-- Image du dé en arrière-plan -->
            <ImageView
                android:id="@+id/dice_form"
                android:layout_width="222dp"
                android:layout_height="222dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/dice_form" />

            <!-- Visage de dé par-dessus -->
            <but.app.needice.view.DiceFace
                android:id="@+id/dice_face"
                android:layout_width="222dp"
                android:layout_height="222dp"
                android:layout_gravity="center_horizontal"/>

        </FrameLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="50dp">

            <Button
                android:id="@+id/button_left"
                android:layout_width="40dp"
                android:layout_height="150dp"
                android:layout_gravity="start"
                android:text="@string/left_drawer_button"/>

            <View
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_weight="1"/>

            <Button
                android:id="@+id/button_right"
                android:layout_width="40dp"
                android:layout_height="150dp"
                android:layout_gravity="end"
                android:text="@string/right_drawer_button"/>

        </LinearLayout>

        <TextView
            android:id="@+id/number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:gravity="center"
            android:layout_marginTop="50dp"
            android:textSize="40sp"
            android:textColor="@color/black"/>

<<<<<<< HEAD
        <TextView
            android:id="@+id/textx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/texty"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <TextView
            android:id="@+id/textz"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text=""
            android:layout_gravity="center"
            android:gravity="center"
            android:textSize="20sp"
            android:textColor="@color/black"/>

        <Button
            android:id="@+id/micro"
            android:layout_width="56dp"
            android:layout_height="56dp"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/ic_micro"
            android:text=""
            android:textColor="@android:color/white"
            android:textSize="20sp"/>

=======
>>>>>>> voletDice
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">


    <!-- Volet gauche -->
        <FrameLayout
            android:id="@+id/left_drawer"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:background="@color/light_blue"
            android:visibility="invisible">

            <Button
                android:id="@+id/button_red"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="50dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/red_button"/>
            <Button
                android:id="@+id/button_green"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="200dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/green_button"/>
            <Button
                android:id="@+id/button_black"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="350dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/black_button"/>

            <Button
                android:id="@+id/button_left2"
                android:layout_width="40dp"
                android:layout_height="150dp"
                android:layout_gravity="center|end"
                android:text="@string/left_drawer_button"/>
        </FrameLayout>


        <View
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_weight="1"/>


        <!-- Volet droit -->
        <FrameLayout
            android:id="@+id/right_drawer"
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:background="@color/light_blue"
            android:visibility="invisible">

            <TextView
                android:id="@+id/NumberSelected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text=""
                android:textSize="15sp"
                android:textColor="@color/white"/>

            <Button
                android:id="@+id/button_2"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="30dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/number_2"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:background="@drawable/number_button"/>
            <Button
                android:id="@+id/button_3"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="200dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/number_3"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:background="@drawable/number_button"/>
            <Button
                android:id="@+id/button_4"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="350dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/number_4"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:background="@drawable/number_button"/>
            <Button
                android:id="@+id/button_5"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="500dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/number_5"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:background="@drawable/number_button"/>
            <Button
                android:id="@+id/button_6"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_marginTop="650dp"
                android:layout_gravity="center_horizontal"
                android:text="@string/number_6"
                android:textSize="35sp"
                android:textColor="@color/black"
                android:background="@drawable/number_button"/>

            <Button
                android:id="@+id/button_right2"
                android:layout_width="40dp"
                android:layout_height="150dp"
                android:layout_gravity="center|start"
                android:text="@string/right_drawer_button"/>
        </FrameLayout>
    </LinearLayout>
</androidx.drawerlayout.widget.DrawerLayout>